<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.asistencia.Acciones">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/acciones_menu"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/acciones_menu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/button_acciones_agregar_asignatura"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_acciones_agregar_asignatura"
            android:layout_gravity="center_horizontal"
            android:onClick="goElegirAsignatura"
            android:background="@drawable/boton_redondo"
            android:layout_margin="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/button_acciones_crear_clase"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_acciones_crear_clase"
            android:onClick="goCrearClase"
            android:background="@drawable/boton_redondo"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/button_acciones_agregar_clase"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_acciones_agregar_clase"
            android:onClick="goAgregarClase"
            android:background="@drawable/boton_redondo"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/button_acciones_comprobar_clase"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_acciones_comprobar_clase"
            android:onClick="goComprobarClase"
            android:background="@drawable/boton_redondo"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="start">
        <Button
            android:id="@+id/button_acciones_salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_acciones_salir"
            android:onClick="goLogin"
            android:background="@drawable/boton_redondo"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>
