<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp"
    tools:context="com.abades.alberto.tfg_and_2.ElegirAsignatura">
    <TextView
        android:id="@+id/texto_carreras"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/texto_carreras"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <Spinner
        android:id="@+id/spinner_clase_carreras"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />
    <Button
        android:id="@+id/button_carreras"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_carreras"
        android:onClick="ElegirMiAsignatura"
        android:background="#FFFFFF"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/texto_conectar_5"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text=" "
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/texto_asignaturas"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/texto_asignaturas"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <Spinner
        android:id="@+id/spinner_clase_asignaturas"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <Button
        android:id="@+id/button_agregar_asignatura"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_agregar_asignatura"
        android:onClick="Crear"
        android:background="#FFFFFF"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/texto_conectar_3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text=" "
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/texto_conectar_4"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text=" "
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/texto_horario"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/texto_horario"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <Spinner
        android:id="@+id/spinner_horario_dias"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />


    <Button
        android:id="@+id/button_volver_acciones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_volver_acciones"
        android:onClick="goAcciones"
        android:background="#FFFFFF"
        android:layout_margin="5dp"/>


</LinearLayout>
