<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="NUEVO USUARIO"
            android:textSize="30sp"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center|bottom"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DNI:"
            />
        <EditText
            android:id="@+id/nuevo_usuario_dni"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nuevo_usuario_dni"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center|top"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre:"
            />

        <EditText
            android:id="@+id/nuevo_usuario_nombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nuevo_usuario_nombre"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center|top"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apellido:"
            />

        <EditText
            android:id="@+id/nuevo_usuario_apellido"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nuevo_usuario_apellido"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center|top"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password:"
            />

        <EditText
            android:id="@+id/nuevo_usuario_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/nuevo_usuario_password"
            android:password="true"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button_volver_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_volver_login"
            android:onClick="volverLogin"
            android:background="#FFFFFF"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/button_mandar_datos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_mandar_datos"
            android:onClick="mandarDatos"
            android:background="#FFFFFF"
            android:layout_margin="5dp"/>

    </LinearLayout>

</LinearLayout>

