<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/nombre_app"
            android:textSize="30sp"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center|bottom"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <EditText
            android:id="@+id/login_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffaaffaa"
            android:hint="@string/login_dni"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:background="#ffaaffaa"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/button_sign_in"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_sign_in"
                android:onClick="goSignIn"
                android:layout_margin="5dp"
                android:background="@drawable/boton_redondo"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/button_login"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_login"
                android:onClick="ejecutarLogin"
                android:layout_margin="5dp"
                android:background="@drawable/boton_redondo"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

