<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"

    tools:context="com.abades.alberto.tfg_and_2.ElegirAsignatura">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/texto_carreras"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/texto_carreras"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Spinner
            android:id="@+id/spinner_agregar_carreras"
            android:background="@drawable/spinner_personalizado"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/button_carreras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_carreras"
            android:onClick="ElegirAsignaturas"
            android:background="@drawable/boton_redondo"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/texto_asignaturas"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/texto_asignaturas"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center|center_horizontal"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Spinner
            android:id="@+id/spinner_agregar_asignaturas"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/spinner_personalizado"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/button_agregar_asignatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_agregar_asignatura"
            android:onClick="Agregar"
            android:background="@drawable/boton_redondo"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="start">
        <Button
            android:id="@+id/button_volver_acciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_volver_acciones"
            android:onClick="goAcciones"
            android:background="@drawable/boton_redondo"
            android:layout_margin="5dp" />
    </LinearLayout>

</LinearLayout>
